# yahoo-ai-gm

./: .gitignore  README.md  pyproject.toml  pyproject.toml.broken.20260225-091427  settings.py  yahoo_client.py
data/: acquisition_log.json  execution_log.jsonl  fg_proj_bat_2026.json  fg_proj_pit_2026.json  il_status.json  league_rosters.json  league_schedule.json  pool_RP_200.json  pool_RP_200_baseline_2025.json  roster.json  stat_map.json  waiver_pool_baseline_2025.json  waiver_pool_baseline_2025_300.json  waiver_pool_baseline_2025_test.json
data/projection_snapshots/: projections_week_00_preseason.json  (+1 more)
deploy/: yahoo-ai-gm-league-rosters.service  yahoo-ai-gm-league-rosters.timer  yahoo-ai-gm-projections.service  yahoo-ai-gm-projections.timer  yahoo-ai-gm-report.service  yahoo-ai-gm-report.timer  yahoo-ai-gm-snapshot.service  yahoo-ai-gm-snapshot.timer  yahoo-ai-gm.service
scripts/: _io.py  build_snapshot.py  category_pressure.py  check_il.py  compute_sv_market.py  daily_report.py  enrich_pool_lastseason.py  enrich_pool_stats.py  execute_moves.py  generate_pdf_report.py  gm_report.py  hello_league.py  my_team_key.py  pull_fg_projections.py  pull_league_rosters.py  pull_matchup.py  pull_roster.py  pull_roster_snapshot.py  pull_scoreboard_week.py  pull_stat_map.py  pull_waiver_pool.py  pull_waiver_pool_pos.py  rank_pool.py  rank_sv_pool.py  refresh_snapshot.sh  roster_inspector.py  run_inefficiency.py  run_pressure.py  run_waivers.py  send_report_email.py  snapshot_projections.py  waiver_targets.py  weekly_report.py  who_am_i.py
service/: deps.py  main.py
(+55 files in other folders)
